# squirrel_driver

./: .gitignore  .robotino-api2.install.sh  .travis.install.sh  .travis.rosinstall  .travis.yml  README.md  travis.yml
airskin/: CMakeLists.txt  package.xml
airskin/include/airskin/: AirSkin_Sense.h  I2C_Master_Devantech.h  I2C_Master_Devantech_ISS.h  I2C_Slave.h
airskin/launch/: startup.launch
airskin/scripts/: bumper_sound.py
airskin/src/: AirSkin_Sense.cc  Except.cc  I2C_Master.cc  I2C_Master_Devantech.cc  I2C_Master_Devantech_ISS.cc  I2C_Slave.cc  airskin_node.cc  kbhit.cc
ft17_driver/: CMakeLists.txt  Makefile.tarball  README  ft17driver_0.0-1_64bit.deb  ft17driver_0.0-1_i686.deb  ft17driver_0.0-1_x86_64.deb  install.sh  package.xml
ft17_driver/doc/html/: Broadcast__data_8hpp.html  Broadcast__data_8hpp_source.html  CommProtocol_8cpp.html  CommProtocol_8cpp_source.html  CommProtocol_8hpp.html  CommProtocol_8hpp_source.html  DSP__board_8h.html  DSP__board_8h_source.html  FT17Interface_8h.html  FT17Interface_8h_source.html  annotated.html  classBoards__ctrl-members.html  classBoards__ctrl.html  classCommPacket-members.html  classCommPacket.html  classDsp__Board.html  classFT17Interface.html  classFtBoard-members.html  classFtBoard.html  classTCPCommPacket-members.html  classTCPCommPacket.html  classUDPCommPacket.html  classes.html  definitions_8h.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8158e693dfb6bd2b21641ae0e5444fe0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dprintf_8h.html  dprintf_8h_source.html  files.html  functions.html  functions_func.html  globals.html  (+22 more)
idmind_interaction/: CMakeLists.txt  package.xml
idmind_interaction/msg/: LedControl.msg  LedControlBase.msg  LedControlMouth.msg  MotorControl.msg
idmind_serial/: CMakeLists.txt  package.xml
idmind_teleop/: CMakeLists.txt  package.xml
idmind_teleop/launch/: idmind_teleop.launch  start.sh
idmind_teleop/src/: motors_api.py  squirrel_control.py  teleop_control.py
kclhand_control/: CMakeLists.txt  README  README.md  package.xml
kclhand_control/action/: ActuateHand.action  MoveFinger.action  OpenFingers.action
kclhand_control/config/: hand_config_param.yaml
kclhand_control/scripts/: get_fingertip_state.py  get_joint_angle_sensor_value.py  hand_controller_palm_finger.py  hand_controller_palm_xz.py  hand_joint_state_pub_sim.py  impedance_publisher.py  kclhand_forward_kinematics.py  kclhand_state_publisher.py  palm_stability_controller.py
kclhand_control/src/: kclhand_controller.cpp  kclhand_controller_impedance.cpp  kclhand_controller_js.cpp  kclhand_controller_new.cpp  palm_stability.cpp  stability.cpp  state_publisher.cpp
kclhand_control/srv/: HandOperationMode.srv  MoveFinger.srv  MoveHand.srv  getCurrentConfiguration.srv  graspCurrent.srv  graspPreparation.srv  handConfiguration.srv  moveFinger.srv
kclhand_control/udev/: Readme_udev_rules  create_udev_rules.sh  metahand_usb.rules
raspberry_screen/: CMakeLists.txt  package.xml
raspberry_screen/src/: raspberry_screen_client.py
robotino_api2/: CMakeLists.txt  install_robotino_api2.bash  package.xml
robotino_driver/: CMakeLists.txt  package.xml
robotino_driver/launch/: viewcontroller.launch
robotino_driver/model/: robotino_driver.ros_package
robotino_driver/src/: ViewController.cpp  ViewControllerNode.cpp  view_controller_node.cpp
squirrel_arm/: CMakeLists.txt  README.md  package.xml
squirrel_control/: CMakeLists.txt  package.xml
squirrel_control/config/: controllers.yaml
squirrel_control/launch/: squirrel_control.launch
squirrel_control/src/: ArmControllerSim.cpp  arm_hardware_interface.cpp  base_controller.cpp  motor_utilities.cpp  squirrel_hardware_interface.cpp  squirrel_hw_control_loop.cpp  squirrel_hw_interface.cpp  squirrel_hw_main.cpp  squirrel_sim_hw_interface.cpp  squirrel_sim_hw_main.cpp
squirrel_control/test/: move.sh
squirrel_driver/: CMakeLists.txt  package.xml
squirrel_interaction/: CMakeLists.txt  README.md  env-rasp.sh  package.xml  setup.py
squirrel_interaction/autostart/: image.desktop  squirrel_interaction.sh
squirrel_interaction/board/: CMakeLists.txt  package.xml
squirrel_interaction/cfg/: squirrel_interaction.yaml
squirrel_interaction/devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
squirrel_interaction/launch/: CMakeLists.txt  package.xml  squirrel_interaction.launch
squirrel_interaction/msg/: BaseLights.msg
squirrel_interaction/screen/: CMakeLists.txt  package.xml
squirrel_interaction/speakers/: CMakeLists.txt  package.xml
squirrel_interaction/srv/: StopMotor.srv
squirrel_robot_driver/: CMakeLists.txt  package.xml
squirrel_robot_driver/src/: position_controller.cpp  robot.cpp
squirrel_safety/: CMakeLists.txt  README.md  package.xml  setup.py
squirrel_safety/launch/: squirrel_safety.launch
squirrel_safety/scripts/: squirrel_safety_node.py
squirrel_sensing/: CMakeLists.txt  package.xml
squirrel_sensing_coordinator/: CMakeLists.txt  package.xml
squirrel_sensing_deployment/: CMakeLists.txt  package.xml
squirrel_sensing_node/: CMakeLists.txt  CMakeLists.txt~  package.xml  tactile_calibration.ini
squirrel_sensing_node/doc/: daq_arduino.ino  tactile_calibration TUW.ini  tactile_calibration Vienna1.ini  tactile_calibrationKCL.ini  tactile_calibrationUIBK.ini  tactile_calibrationVienna.ini
squirrel_sensing_node/launch/: startup.launch
squirrel_sensing_node/src/: Classificator.cpp  main.cpp  node.cpp  sensing_drivers.cpp
uibk_arm_controller/: CMakeLists.txt  README  package.xml
uibk_arm_controller/launch/: controller.launch
uibk_arm_controller/src/: ArmControllerSim.cpp  tuw_incremental_arm_movement.py
uibk_robot_driver/: CMakeLists.txt  README.md  package.xml
uibk_robot_driver/launch/: controller.launch  myController.launch
uibk_robot_driver/model/: robotinoarm.urdf
uibk_robot_driver/src/: ArmControllerSim.cpp  QusaiTest.cpp  arm_controller.cpp  base_controller.cpp  motor.cpp  robot_controller.cpp  robot_controller_node.cpp  test_move_base.cpp  tictoc.cpp  tuw_incremental_arm_movement.py  uibk_arm_demo.cpp
(+221 files in other folders)
