<?xml version="1.0"?>
<package>
  <name>airskin</name>
  <version>0.0.0</version>
  <description>The airskin (tactile skin) package.</description>

  <maintainer email="michael.zillich@tuwien.ac.at">mz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sound_play</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sound_play</run_depend>

</package>
