<?xml version="1.0"?>
<package>
  <name>idmind_teleop</name>
  <version>0.0.1</version>
  <description>The idmind_teleop package</description>
  <maintainer email="dgameiro@idmind.pt">Duarte Lopes Gameiro</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
