<?xml version="1.0"?>
<package>
  <name>robotino_driver</name>
  <version>0.0.0</version>
  <description>ROS drivers for the Festo Robotino robot</description>

  <maintainer email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="team02@todo.todo">team02</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>squirrel_view_controller_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>robotino_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotino-api2</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>robotino_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>robotino_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>robotino-api2</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>squirrel_view_controller_msgs</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>robotino_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
