<?xml version="1.0"?>
<package>
  <name>squirrel_control</name>
  <version>0.0.0</version>
  <description>The squirrel_control package</description>

  <maintainer email="philipp.zech@uibk.ac.at">Philipp Zech</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>squirrel_safety_msgs</build_depend>
  <build_depend>squirrel_control_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>squirrel_safety_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>squirrel_control_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
