<package>
  <name>squirrel_driver</name>
  <version>0.0.1</version>
  <description>Hardware driver and low-level software for the SQUIRREL project</description>
  <maintainer email="jelizaveta.zirjakova@kcl.ac.uk">jelizaveta</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <run_depend>squirrel_sensing_node</run_depend>

  <export>
	<metapackage/>
  </export>
</package>
