<package>
  <name>squirrel_driver</name>
  <version>0.0.1</version>
  <description>Hardware driver and low-level software for the SQUIRREL project</description>
  <maintainer email="nadia.hammoudeh.garcia@ipa.fraunhofer.de">Nadia Hammoudeh Garcia</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <run_depend>airskin</run_depend>
  <run_depend>ft17_driver</run_depend>
  <run_depend>robotino_driver</run_depend>
  <run_depend>robotino_safety</run_depend>
  <run_depend>robotino_teleop</run_depend>
  <run_depend>squirrel_sensing_node</run_depend>
  <run_depend>squirrel_softhand</run_depend>

  <run_depend>uibk_robot_driver</run_depend>
  <export>
	<metapackage/>
  </export>
</package>
