<?xml version="1.0"?>
<package>
  <name>squirrel_robot_driver</name>
  <version>0.0.0</version>
  <description>The squirrel_robot_driver package</description>

  <maintainer email="patten@acin.tuwien.ac.att">Tim Patten</maintainer>
  <maintainer email="philipp.zech@uibk.ac.at">Philipp Zech</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ros_control</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>squirrel_safety_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>squirrel_safety_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>